Fixed card width on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,6 @@
 
 .item-grade-card {
   height: 15rem;
-  margin-right: 1rem;
 }
 
 .sold-price-card {
